--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is my GutHub Pages website!</h1>
+    <h1 style="color: darkblue;">This is my GutHub Pages website!</h1>
 </body>
 </html>
